# dream-chairs

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml
data/descriptors/: body_posture_axes.json  design_families.json  visual_descriptors.json
data/dreams/: dream_dataset.json  dream_series.json  example_dreams.json
data/symbols/: symbols.template.json
docs/: SCRIPTS.md  SUMMARY_FOR_STUDENTS.md
docs/figures/: README.md
dream_chairs/: __init__.py  axes.py  classify.py  cli.py  cluster.py  config.py  embed.py  families.py  generate.py  io_utils.py  pipeline.py  render3d.py  utils.py
dream_chairs/openshape_vendor/: __init__.py  pointnet_util.py  ppat_rgb.py
scripts/: alignment.py  cluster_dataset.py  design_families.py  dream_series_demo.py  extract_posture.py  flag_blobs.py  generate_dataset.py  make_dreams.py  make_figures.py  md_to_pdf.py  posture_chair.py  posture_map.py  reclassify_openshape.py  render_dreams.py  smoke_test.py
